# ESET-MCP

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Caddyfile  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: integration.yml  publish-image.yml
eset_mcp/: __init__.py  __main__.py  auth.py  client_pool.py  composite_tools.py  config.py  credentials.py  errors.py  http_client.py  middleware.py  modes.py  regions.py  response_shaping.py  server.py  tools_loader.py
eset_mcp/observability/: __init__.py  logging.py  metrics.py
eset_mcp/openapi/: application-management.json  asset-management.json  automation.json  business-account.json  device-management.json  iam.json  incident-management.json  installer-management.json  mobile-device-management.json  network-access-protection.json  onprem-path-overrides.json  patch-management.json  policy-management.json  quarantine-management.json  user-management.json  vulnerability-management.json  web-access-protection.json
tests/: conftest.py  test_catalog_vs_openapi.py  test_client_pool.py  test_composite_tools.py  test_concurrency.py  test_credentials.py  test_middleware.py  test_mode_gate.py  test_observability.py  test_onprem.py  test_pagination.py  test_response_shaping.py  test_smoke_ro.py
