[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eset-mcp"
version = "1.0.1"
description = "MCP server for the ESET ecosystem (Connect cloud + PROTECT On-Prem, RO/RW, multi-tenant, Cloudflare Access, Prometheus metrics)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "maciekaz", email = "117506172+maciekaz@users.noreply.github.com" }]
keywords = ["mcp", "model-context-protocol", "eset", "eset-connect", "eset-protect", "security", "edr", "ai-agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # MCP SDK (Python) — spec 2025-11-25 compatible.
    "mcp>=1.2.0",
    # HTTP client — async, with retries / streaming / connection pooling.
    "httpx>=0.27",
    # Pydantic for input validation and auto-generating inputSchema for tools.
    "pydantic>=2.7",
    # .env loader (better than a hand-rolled parser — e.g. correct quoting).
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # httpx mocking for unit tests
    "ruff>=0.6",
    "prometheus-client>=0.20",  # needed for the metrics tests
]
metrics = [
    # Opt-in Prometheus exposition. Without this dep, ESET_MCP_METRICS_ENABLED=true
    # still works but /metrics returns a 503 with a helpful hint.
    "prometheus-client>=0.20",
]

[project.scripts]
# After `pip install .` we get `eset-mcp` on PATH.
eset-mcp = "eset_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/maciekaz/ESET-MCP"
Repository = "https://github.com/maciekaz/ESET-MCP"
Issues = "https://github.com/maciekaz/ESET-MCP/issues"
Changelog = "https://github.com/maciekaz/ESET-MCP/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["eset_mcp*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
eset_mcp = ["openapi/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "ro: read-only smoke tests (always on)",
    "rw: read-write tests (skipped by default — needs an RW-capable account)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length — readability over strictness
